--- a/css/styles.css
+++ b/css/styles.css
@@ -32,9 +32,9 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  /* --bs-primary-rgb: 189, 93, 56; */
+  --bs-primary-rgb: 189, 93, 56;
   /* --bs-primary-rgb: 00, 80, 00; */
-  --bs-primary-rgb: 00, 00, 8b;
+/*  --bs-primary-rgb: 00, 00, 8b; */
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
