--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,8 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 189, 93, 56;
+  /* --bs-primary-rgb: 189, 93, 56; */
+  --bs-primary-rgb: 00, 80, 00;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -11423,4 +11424,5 @@ section.resume-section .resume-section-content {
     padding-top: 5rem;
     padding-bottom: 5rem;
   }
+  
 }
